some files added

--- a/PIM/static/ngTemplates/app.home.dashboard.html
+++ b/PIM/static/ngTemplates/app.home.dashboard.html
@@ -1,11 +1,11 @@
-<div class="" style="min-height:93vh;position:relative;background-color:#f8f8f8">
+<div class="" style="min-height:93vh;position:relative;background-color:#f8f8f8;">
 
   <breadcrumb></breadcrumb>
-  <div ng-if="!isCustomer" class="container-fluid" style="color:black">
+  <div ng-if="!isCustomer&&isAdminLoaded" class="container-fluid bal_fadding_In" style="color:#2B2B2B">
 
     <div class="row">
       <div class="col-md-12">
-        <h3>Activity <span>Past 7 Days</span></h3>
+        <h3 style="margin-top:0px">Activity <span>Past 7 Days</span></h3>
       </div>
     </div>
     <div class="row">
@@ -17,7 +17,7 @@
                 <h4># Of Chats &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
               </div>
               <div class="col-md-6 text-right">
-                <h4><i class="fa fa-sort-{{changeInChat.increase?'asc':'desc'}} fa-lg" style="color:#bcd46e"></i> &nbsp;{{changeInChat.percentage.toFixed(2)}}%</h4>
+                <h4><i class="fa fa-arrow-{{changeInChat.increase?'up':'down'}}" style="color:{{changeInChat.increase? 'green':'red'}}"></i> &nbsp;{{changeInChat.percentage.toFixed(2)}}%</h4>
               </div>
             </div>
             <div class="row">
@@ -27,7 +27,11 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-                <canvas id="bar" class="chart chart-bar" chart-data="barData" chart-labels="barlabels" chart-series="series" chart-colors="barColours" chart-options="sharesOptions">
+                <!-- <canvas id="bar" class="chart chart-bar" chart-data="barData" chart-labels="barlabels" chart-series="series" chart-colors="barColours" chart-options="sharesOptions">
+                </canvas> -->
+                <canvas id="line" class="chart chart-line" chart-data="noOfChatData"
+                    chart-labels="noOfChatLabels" chart-options="noOfChatOptions"
+                    chart-dataset-override="datasetOverride">
                 </canvas>
               </div>
             </div>
@@ -63,120 +67,82 @@
       </div>
     </div>
 
-    <div class="row" style="margin-top:20px">
-      <div class="col-md-6 ">
-        <div class="container-fluid" style="background-color:#fff;">
-          <div class="row" style="padding:25px">
-            <div class="row">
-              <div class="col-md-6">
-                <h4># Of Missed Chats &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
+    <div class="row container-fluid" style="margin-top:20px;">
+      <div class="col-md-4">
+        <div class="container-fluid" style="background-color:#fff;box-shadow:0px 1px .5px var(--themeMain)">
+              <div class="row" style="background-color:#f6f6f6;padding:5px 10px;font-size:15px">
+                <p style="display:inline-block"># Of Missed Chats &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></p>
+                <p style="display:inline-block;float:right"><i class="fa fa-arrow-{{changeInMissedChat.increase?'up':'down'}}" style="color:{{changeInMissedChat.increase? 'green':'red'}}"></i> &nbsp;{{changeInMissedChat.percentage.toFixed(2)}}%</p>
               </div>
-              <!-- <div class="col-md-6 text-right">
-                <h4><i class="fa fa-sort-desc fa-lg" style="color:#bcd46e"></i> &nbsp;77.78%</h4>
-              </div> -->
-              <div class="col-md-6 text-right">
-                <h4><i class="fa fa-sort-{{changeInMissedChat.increase?'asc':'desc'}} fa-lg" style="color:#bcd46e"></i> &nbsp;{{changeInMissedChat.percentage.toFixed(2)}}%</h4>
+
+              <div class="col-md-12" style="text-align:center;font-size:23px;font-weight:400;opacity:0.8">
+                <p>{{missedChats}}</p>
               </div>
+        </div>
+      </div>
+
+
+      <div class="col-md-4">
+        <div class="container-fluid" style="background-color:#fff;box-shadow:0px 1px .5px var(--themeMain)">
+            <div class="row" style="background-color:#f6f6f6;padding:5px 10px;font-size:15px">
+                <p style="display:inline-block">Average Chat Duration &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></p>
+                <p style="display:inline-block;float:right"><i class="fa fa-arrow-{{changeInAvgChatDur.increase?'up':'down'}}" style="color:{{changeInAvgChatDur.increase? 'green':'red'}}"></i> &nbsp;{{changeInAvgChatDur.percentage.toFixed(2)}}%</p>
             </div>
-            <div class="row">
-              <div class="col-md-12">
-                <h3>{{missedChats}}</h3>
-              </div>
+            <div class="col-md-12" style="text-align:center;font-size:23px;font-weight:400;opacity:0.8">
+              <p>{{avgChatDuration.toFixed(2)}} Min</p>
             </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="container-fluid" style="background-color:#fff;box-shadow:0px 1px .5px var(--themeMain)">
+          <div class="row" style="background-color:#f6f6f6;padding:5px 10px;font-size:15px">
+            <p style="display:inline-block">Average Rating &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></p>
+            <!-- <p style="display:inline-block;float:right"><i class="fa fa-sort-asc fa-lg" style="color:#bcd46e"></i> &nbsp;2.94%</p> -->
+          <p style="display:inline-block;float:right"><i class="fa fa-arrow-{{changeInAverageRating.increase?'up':'down'}}" style="color:{{changeInAverageRating.increase? 'green':'red'}}"></i> &nbsp;{{changeInAverageRating.percentage.toFixed(2)}}%</p>
+          </div>
+          <div class="col-md-12" style="text-align:center;font-size:23px;font-weight:400;opacity:0.8">
+            <p>{{avgRatingAll.toFixed(2)}}</p>
           </div>
         </div>
       </div>
-      <div class="col-md-6 ">
-        <div class="container-fluid" style="background-color:#fff;">
-          <div class="row" style="padding:25px">
-            <div class="row">
-              <div class="col-md-6">
-                <h4>Average Chat Duration &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
-              </div>
-              <!-- <div class="col-md-6 text-right">
-                <h4><i class="fa fa-sort-asc fa-lg" style="color:#e85c30"></i> &nbsp;19.44%</h4>
-              </div> -->
-              <div class="col-md-6 text-right">
-                <h4><i class="fa fa-sort-{{changeInAvgChatDur.increase?'asc':'desc'}} fa-lg" style="color:#bcd46e"></i> &nbsp;{{changeInAvgChatDur.percentage.toFixed(2)}}%</h4>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <h3>{{avgChatDuration.toFixed(2)}} Min</h3>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+
+
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-md-12">
         <h3>Satisfaction <span>Past 7 Days</span></h3>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6 ">
-        <div class="container-fluid" style="background-color:#fff;">
-          <div class="row" style="padding:25px">
-            <div class="row">
-              <div class="col-md-6">
-                <h4>Average Rating &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
-              </div>
-              <div class="col-md-6 text-right">
-                <h4><i class="fa fa-sort-asc fa-lg" style="color:#bcd46e"></i> &nbsp;2.94%</h4>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <h3>{{avgRatingAll.toFixed(2)}}</h3>
-              </div>
-            </div>
+    </div> -->
+    <div class="">
+      <div class=" col-md-6">
+        <div class="col-md-12" style="background-color:#fff;margin-top:20px;box-shadow:0px 1px .5px var(--themeMain)">
+          <div class="row" style="background-color:#f6f6f6;padding:5px 10px;font-size:15px">
+            <p style="display:inline-block">Average Response Time(ART) &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></p>
+            <p style="display:inline-block;float:right"><i class="fa fa-arrow-{{chaneInAvgResponseTime.increase?'up':'down' }}" style="color:{{chaneInAvgResponseTime.increase?'#bcd46e':'#c43f3f'}} "></i> &nbsp;{{chaneInAvgResponseTime.percentage}}%</p>
+          </div>
+            <div class="col-md-12" style="text-align:center;font-size:23px;font-weight:400;opacity:0.8">
+            <p>{{avgRespTimeAll.toFixed(2)}} Min</p>
           </div>
         </div>
-        <div class="container-fluid" style="background-color:#fff;margin-top:20px">
-          <div class="row" style="padding:25px">
-            <div class="row">
-              <div class="col-md-6">
-                <h4>Average Response Time(ART) &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
-              </div>
-              <div class="col-md-6 text-right">
-                <h4><i class="fa fa-sort-{{chaneInAvgResponseTime.increase?'asc':'desc' }} fa-lg" style="color:{{chaneInAvgResponseTime.increase?'#bcd46e':'#c43f3f'}} "></i> &nbsp;{{chaneInAvgResponseTime.percentage}}%</h4>
-              </div>
+        <div class="col-md-12" style="background-color:#fff;margin-top:20px;box-shadow:0px 1px .5px var(--themeMain)">
+            <div class="row" style="background-color:#f6f6f6;padding:5px 10px;font-size:15px">
+              <p style="display:inline-block">Average First Response Time(AFRT) &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></p>
+              <p style="display:inline-block;float:right"><i class="fa fa-arrow-{{chaneInAvgFTResponseTime.increase?'up':'down' }}" style="color:{{chaneInAvgFTResponseTime.increase?'#bcd46e':'#c43f3f'}} "></i> &nbsp;{{chaneInAvgFTResponseTime.percentage}}%</p>
             </div>
-            <div class="row">
-              <div class="col-md-12">
-                <h3>{{avgRespTimeAll.toFixed(2)}} Min</h3>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container-fluid" style="background-color:#fff;margin-top:20px">
-          <div class="row" style="padding:25px">
-            <div class="row">
-              <div class="col-md-6">
-                <h4>Average First Response Time(AFRT) &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
-              </div>
-              <div class="col-md-6 text-right">
-                <h4><i class="fa fa-sort-{{chaneInAvgFTResponseTime.increase?'asc':'desc' }} fa-lg" style="color:{{chaneInAvgFTResponseTime.increase?'#bcd46e':'#c43f3f'}} "></i> &nbsp;{{chaneInAvgFTResponseTime.percentage}}%</h4>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <h3>{{firstResTimeAvgAll.toFixed(2)}} Min</h3>
-              </div>
-            </div>
+            <div class="col-md-12" style="text-align:center;font-size:23px;font-weight:400;opacity:0.8">
+            <p>{{firstResTimeAvgAll.toFixed(2)}} Min</p>
           </div>
         </div>
       </div>
-      <div class="col-md-6 ">
-        <div class="container-fluid" style="background-color:#fff;">
-          <div class="row" style="padding:25px">
-            <div class="row">
+      <div class="col-md-6">
+        <div class="container-fluid" style="background-color:#fff;margin-top:20px;box-shadow:0px 1px .5px var(--themeMain)">
+
               <div class="col-md-12">
                 <h4>Agent Leaderboard &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
               </div>
-            </div>
+
             <div class="row col-md-12">
               <table class="table" style="font-size:18px">
                 <thead>
@@ -197,18 +163,16 @@
                 </tbody>
               </table>
             </div>
-          </div>
+
         </div>
       </div>
     </div>
+</div>
 
-  </div>
-
-
-  <div ng-if="isCustomer" class="container-fluid" style="color:black">
+  <div ng-if="isCustomer&&isCustomerLoaded" class="container-fluid bal_fadding_In" style="color:#525459">
     <div class="row">
       <div class="col-sm-12">
-        <h3>Activity <span>Past 7 Days</span></h3>
+        <h3 style="margin-top:0px">Activity <span>Past 7 Days</span></h3>
       </div>
     </div>
     <div class="row">
@@ -231,8 +195,10 @@
             <!-- <div class="row"> -->
               <div class="col-sm-12" style="padding-top:25px">
                 <!-- <canvas id="bar" class="chart chart-bar" chart-data="data" chart-labels="barlabels"> chart-series="series"</canvas> -->
-                <canvas id="bar" class="chart chart-bar" chart-data="barData" chart-labels="barlabels" chart-series="series" chart-colors="barColours" chart-options="sharesOptions">
-                  </canvas>
+                <canvas id="line" class="chart chart-line" chart-data="noOfChatData"
+                    chart-labels="noOfChatLabels" chart-options="noOfChatOptions"
+                    chart-dataset-override="datasetOverride">
+                </canvas>
               </div>
             <!-- </div> -->
           </div>
