--- a/support/static/ngTemplates/app.projects.junk.explore.html
+++ b/support/static/ngTemplates/app.projects.junk.explore.html
@@ -100,7 +100,7 @@
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-5 text-center">
-            <label>  PO Ref Date : </label>
+            <label>  PO Date : </label>
           </div>
           <div class="col-md-7 text-center">
             <span> {{form.poDate}}</span>
@@ -108,7 +108,7 @@
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-5 text-center">
-            <label> Quotation ref Number : </label>
+            <label> Quotation Number : </label>
           </div>
           <div class="col-md-7 text-center">
             <span> {{form.quoteRefNumber}}</span>
@@ -116,7 +116,7 @@
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-5 text-center">
-            <label> Quotation Ref Date  : </label>
+            <label> Quotation Date  : </label>
           </div>
           <div class="col-md-7 text-center">
             <span> {{form.quoteDate}}</span>
@@ -133,7 +133,7 @@
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-5 text-center">
-            <label> BOE ref Number : </label>
+            <label> BOE Number : </label>
           </div>
           <div class="col-md-7 text-center">
             <span> {{form.boeRefNumber}}</span>
@@ -163,12 +163,20 @@
             <span> {{form.delivery}}</span>
           </div>
         </div>
-        <div class="row" style="padding-top:10px">
-          <div class="col-md-5 text-center">
-            <label> Payment Terms : </label>
+        <div class="row" style="padding-top:10px" ng-if="options">
+          <div class="col-md-12 text-center">
+            <label> Payment Terms (Quotation) : </label>
           </div>
-          <div class="col-md-7 text-center">
-            <span> {{form.paymentTerms}}</span>
+          <div class="col-md-12">
+            <input type="text" class="form-control text-center" ng-model="form.paymentTerms" placeholder="Payment Terms (Quotation)" ng-change="paymentSave()">
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px" ng-if="options">
+          <div class="col-md-12 text-center">
+            <label> Payment Terms (PO) : </label>
+          </div>
+          <div class="col-md-12">
+            <input type="text" class="form-control text-center" ng-model="form.paymentTerms1" placeholder="Payment Terms (PO)" ng-change="paymentSavePO()">
           </div>
         </div>
         <div class="row" style="padding-top:10px">
