--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -101,7 +101,7 @@
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-12 text-center">
-            <label> PO Ref Date : </label>
+            <label> PO Date : </label>
           </div>
           <div class="col-md-12">
             <div class="input-group text-center">
@@ -114,7 +114,7 @@
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-12 text-center">
-            <label> Quotation ref Number : </label>
+            <label> Quotation Number : </label>
           </div>
           <div class="col-md-12">
             <input type="text" class="form-control text-center" ng-model="form.quoteRefNumber" placeholder="Quotation Ref Number" ng-change="quoteChange()">
@@ -122,7 +122,7 @@
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-12 text-center">
-            <label> Quotation Ref Date : </label>
+            <label> Quotation Date : </label>
           </div>
           <div class="col-md-12">
             <div class="input-group text-center">
@@ -144,7 +144,7 @@
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-12 text-center">
-            <label> BOE ref Number : </label>
+            <label> BOE Number : </label>
           </div>
           <div class="col-md-12">
             <input type="text" class="form-control text-center" ng-model="form.boeRefNumber" placeholder="BOE Ref Number" ng-change="boeChange()">
@@ -179,10 +179,18 @@
         </div>
         <div class="row" style="padding-top:10px" ng-if="options">
           <div class="col-md-12 text-center">
-            <label> Payment Terms : </label>
+            <label> Payment Terms (Quotation) : </label>
           </div>
           <div class="col-md-12">
-            <input type="text" class="form-control text-center" ng-model="form.paymentTerms" placeholder="Payment Terms" ng-change="paymentSave()">
+            <input type="text" class="form-control text-center" ng-model="form.paymentTerms" placeholder="Payment Terms (Quotation)" ng-change="paymentSave()">
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px" ng-if="options">
+          <div class="col-md-12 text-center">
+            <label> Payment Terms (PO) : </label>
+          </div>
+          <div class="col-md-12">
+            <input type="text" class="form-control text-center" ng-model="form.paymentTerms1" placeholder="Payment Terms (PO)" ng-change="paymentSavePO()">
           </div>
         </div>
         <div class="row" style="padding-top:10px" ng-if="options">
@@ -649,7 +657,7 @@
 
       <div class="row" style="padding-top:10px">
         <div class="col-md-5 text-center">
-          <label>  PO Ref Date : </label>
+          <label>  PO Date : </label>
         </div>
         <div class="col-md-7 text-center">
           <span> {{form.poDate}}</span>
@@ -657,7 +665,7 @@
       </div>
       <div class="row" style="padding-top:10px">
         <div class="col-md-5 text-center">
-          <label> Quotation ref Number : </label>
+          <label> Quotation Number : </label>
         </div>
         <div class="col-md-7 text-center">
           <span> {{form.quoteRefNumber}}</span>
@@ -665,7 +673,7 @@
       </div>
       <div class="row" style="padding-top:10px">
         <div class="col-md-5 text-center">
-          <label> Quotation Ref Date : </label>
+          <label> Quotation Date : </label>
         </div>
         <div class="col-md-7 text-center">
           <span> {{form.quoteDate}}</span>
@@ -681,7 +689,7 @@
       </div>
       <div class="row" style="padding-top:10px">
         <div class="col-md-5 text-center">
-          <label> BOE ref Number : </label>
+          <label> BOE Number : </label>
         </div>
         <div class="col-md-7 text-center">
           <span> {{form.boeRefNumber}}</span>
@@ -713,10 +721,18 @@
       </div>
       <div class="row" style="padding-top:10px">
         <div class="col-md-5 text-center">
-          <label> Payment Terms : </label>
+          <label> Payment Terms (Quotation) : </label>
         </div>
         <div class="col-md-7 text-center">
           <span> {{form.paymentTerms}}</span>
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px">
+        <div class="col-md-5 text-center">
+          <label> Payment Terms (PO) : </label>
+        </div>
+        <div class="col-md-7 text-center">
+          <span> {{form.paymentTerms1}}</span>
         </div>
       </div>
       <div class="row" style="padding-top:10px">
@@ -1100,7 +1116,7 @@
       </div>
       <div class="row" style="padding-top:10px">
         <div class="col-md-12 text-center">
-          <label> PO Ref Date : </label>
+          <label> PO Date : </label>
         </div>
         <div class="col-md-12">
           <div class="input-group text-center">
@@ -1113,7 +1129,7 @@
       </div>
       <div class="row" style="padding-top:10px">
         <div class="col-md-12 text-center">
-          <label> Quotation ref Number : </label>
+          <label> Quotation Number : </label>
         </div>
         <div class="col-md-12">
           <input type="text" class="form-control text-center" ng-model="form.quoteRefNumber" placeholder="Quotation Ref Number" ng-change="quoteChange()">
@@ -1121,7 +1137,7 @@
       </div>
       <div class="row" style="padding-top:10px">
         <div class="col-md-12 text-center">
-          <label> Quotation Ref Date : </label>
+          <label> Quotation Date : </label>
         </div>
         <div class="col-md-12">
           <div class="input-group text-center">
@@ -1142,7 +1158,7 @@
       </div>
       <div class="row" style="padding-top:10px">
         <div class="col-md-12 text-center">
-          <label> BOE ref Number : </label>
+          <label> BOE Number : </label>
         </div>
         <div class="col-md-12">
           <input type="text" class="form-control text-center" ng-model="form.boeRefNumber" placeholder="BOE Ref Number" ng-change="boeChange()">
@@ -1177,10 +1193,18 @@
       </div>
       <div class="row" style="padding-top:10px" ng-if="options">
         <div class="col-md-12 text-center">
-          <label> Payment Terms : </label>
+          <label> Payment Terms (Quotation) : </label>
         </div>
         <div class="col-md-12">
-          <input type="text" class="form-control text-center" ng-model="form.paymentTerms" placeholder="Payment Terms" ng-change="paymentSave()">
+          <input type="text" class="form-control text-center" ng-model="form.paymentTerms" placeholder="Payment Terms (Quotation)" ng-change="paymentSave()">
+        </div>
+      </div>
+      <div class="row" style="padding-top:10px" ng-if="options">
+        <div class="col-md-12 text-center">
+          <label> Payment Terms (PO) : </label>
+        </div>
+        <div class="col-md-12">
+          <input type="text" class="form-control text-center" ng-model="form.paymentTerms1" placeholder="Payment Terms (PO)" ng-change="paymentSavePO()">
         </div>
       </div>
       <div class="row" style="padding-top:10px" ng-if="options">
@@ -1561,7 +1585,7 @@
           </div>
           <div class="row" style="padding-top:10px">
             <div class="col-md-5 text-center">
-              <label>  PO Ref Date : </label>
+              <label>  PO Date : </label>
             </div>
             <div class="col-md-7 text-center">
               <span> {{form.poDate}}</span>
@@ -1569,7 +1593,7 @@
           </div>
           <div class="row" style="padding-top:10px">
             <div class="col-md-5 text-center">
-              <label>  Quotation Ref Number : </label>
+              <label>  Quotation Number : </label>
             </div>
             <div class="col-md-7 text-center">
               <span> {{form.quoteRefNumber}}</span>
@@ -1577,7 +1601,7 @@
           </div>
           <div class="row" style="padding-top:10px">
             <div class="col-md-5 text-center">
-              <label> Quotation Ref Date  : </label>
+              <label> Quotation Date  : </label>
             </div>
             <div class="col-md-7 text-center">
               <span> {{form.quoteDate}}</span>
@@ -1593,7 +1617,7 @@
           </div>
           <div class="row" style="padding-top:10px">
             <div class="col-md-5 text-center">
-              <label> BOE ref Number : </label>
+              <label> BOE Number : </label>
             </div>
             <div class="col-md-7 text-center">
               <span> {{form.boeRefNumber}}</span>
@@ -1625,10 +1649,26 @@
           </div>
           <div class="row" style="padding-top:10px">
             <div class="col-md-5 text-center">
-              <label> Payment Terms : </label>
+              <label> Payment Terms (Quotation) : </label>
             </div>
             <div class="col-md-7 text-center">
               <span> {{form.paymentTerms}}</span>
+            </div>
+          </div>
+          <div class="row" style="padding-top:10px">
+            <div class="col-md-5 text-center">
+              <label> Payment Terms (PO) : </label>
+            </div>
+            <div class="col-md-7 text-center">
+              <span> {{form.paymentTerms1}}</span>
+            </div>
+          </div>
+          <div class="row" style="padding-top:10px">
+            <div class="col-md-5 text-center">
+              <label> Shipment mode : </label>
+            </div>
+            <div class="col-md-7 text-center">
+              <span> {{form.shipmentMode}}</span>
             </div>
           </div>
           <div class="row" style="padding-top:10px">
