--- a/homepage/static/ngTemplates/app.homepage.testimonials.html
+++ b/homepage/static/ngTemplates/app.homepage.testimonials.html
@@ -82,7 +82,7 @@
       <div class="col-md-6" style="position: relative;">
         <div class="movie-card">
           <div class="col-md-5 studentcard" style="min-height:300px;">
-            <img src="/static/images/24tut/student3.png"  style="width:219.683px;height:300px;margin-left: -15px;" />
+            <img src="/static/images/24tut/student3.png"  class="imgstyle" />
           </div>
           <div class="circle">
             <div><b>83%</b></div>
@@ -96,7 +96,7 @@
             <div class="stucardtext">
               <span style="font-size:18px;"><b>Laren Ralpha</b></span>
             </div>
-            <div>
+            <div style="padding-bottom: 20px;">
               <span style="font-size:15px;color:#5B5B5B;padding-bottom: 20px;">Scientology Student - Europe</span>
             </div>
           </div>
@@ -105,7 +105,7 @@
       <div class="col-md-6" style="position: relative;">
         <div class="movie-card">
           <div class="col-md-5 studentcard" style="min-height:300px;">
-            <img src="/static/images/24tut/student2.png"  style="width:219.683px;height:300px;margin-left: -15px;" />
+            <img src="/static/images/24tut/student2.png" class="imgstyle"  />
           </div>
           <div class="circle">
             <div><b>74%</b></div>
@@ -119,7 +119,7 @@
             <div class="stucardtext">
               <span style="font-size:18px;"><b>James Ramirez</b></span>
             </div>
-            <div>
+            <div style="padding-bottom: 20px;">
               <span style="font-size:15px;color:#5B5B5B;padding-bottom: 20px;">Security Student - Brazil</span>
             </div>
           </div>
@@ -146,7 +146,7 @@
           <div class="colorcircle1" ng-style="myObjcolor">
           </div>
           <div class="col-md-5 studentcard1" style="min-height:300px;">
-            <img src="/static/images/24tut/student1.png"  style="width:219.683px;height:300px;margin-left: -15px;margin-bottom: 20px;" />
+            <img src="/static/images/24tut/student1.png" class="imgstyle" style="margin-bottom: 20px;" />
           </div>
         </div>
       </div>
@@ -169,7 +169,7 @@
           <div class="colorcircle1">
           </div>
           <div class="col-md-5 studentcard1" style="min-height:300px;">
-            <img src="/static/images/24tut/student3.png"  style="width:219.683px;height:300px;margin-left: -15px;margin-bottom: 20px;" />
+            <img src="/static/images/24tut/student3.png" class="imgstyle" style="margin-bottom: 20px;" />
           </div>
         </div>
       </div>
